fixed ugly looking team members on small devices

--- a/_sass/layout/_team.scss
+++ b/_sass/layout/_team.scss
@@ -22,3 +22,10 @@
     margin-top: 0;
   }
 }
+
+@media(max-width: 992px) {
+  #team-members-row .team-member {
+    clear: left important!;
+    float: center important!;
+  }
+}
